--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <h1>Login page</h1>
-<form>
+<form action="/login" method="POST">
     <input type="text" name="username" placeholder="Enter Username">
     <input type="password" name="password" placeholder="Enter Password">
     <input type="submit">
