links added for login

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,3 +11,8 @@
     </div>
     <input type="submit">
 </form>
+<h1>Home ejs</h1>
+
+<li><a href="/register">SignUp</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
