--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,3 +4,8 @@
     <input type="password" name="password" placeholder="Enter Password">
     <input type="submit">
 </form>
+<h1>Home ejs</h1>
+
+<li><a href="/register">SignUp</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
