logging links updated

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,3 +3,7 @@
 <p>This page is only for private use</p>
 
 <img style="width:500px" src="https://images.unsplash.com/photo-1530139963092-abc04e3e371b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=015a883f9d6d15898196c7f52ce1a0da&auto=format&fit=crop&w=1100&q=80" alt="sky image">
+
+<li><a href="/register">SignUp</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
